Updated constraint for iPhoneSE

--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="T72-CS-9IC">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -13,7 +13,7 @@
             <objects>
                 <tableViewController id="p0c-m4-x0b" customClass="UserTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="iuo-7y-5U2">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
@@ -72,32 +72,32 @@
             <objects>
                 <viewController id="ICW-5T-ggX" customClass="DetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="XRU-sv-SeX">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="US7-Sd-kcj">
-                                <rect key="frame" x="47" y="180" width="320" height="320"/>
+                                <rect key="frame" x="47" y="136" width="320" height="320"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="US7-Sd-kcj" secondAttribute="height" multiplier="1:1" id="eZt-76-Zx6"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="oQG-s2-iCo">
-                                <rect key="frame" x="47" y="530" width="320" height="132"/>
+                                <rect key="frame" x="47" y="486" width="320" height="150"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cLz-ao-0XV">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="37.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="43.333333333333336"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lYR-lS-hx6">
-                                        <rect key="frame" x="0.0" y="47.5" width="320" height="37"/>
+                                        <rect key="frame" x="0.0" y="53.333333333333371" width="320" height="43.333333333333343"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p5r-tY-uDm">
-                                        <rect key="frame" x="0.0" y="94.5" width="320" height="37.5"/>
+                                        <rect key="frame" x="0.0" y="106.66666666666661" width="320" height="43.333333333333329"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -107,7 +107,7 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="nZ9-4T-bFM" firstAttribute="bottom" secondItem="oQG-s2-iCo" secondAttribute="bottom" constant="200" id="CI3-JH-OKY"/>
+                            <constraint firstItem="nZ9-4T-bFM" firstAttribute="bottom" secondItem="oQG-s2-iCo" secondAttribute="bottom" constant="100" id="CI3-JH-OKY"/>
                             <constraint firstItem="oQG-s2-iCo" firstAttribute="leading" secondItem="nZ9-4T-bFM" secondAttribute="leading" constant="47" id="CjJ-3k-pbg"/>
                             <constraint firstItem="nZ9-4T-bFM" firstAttribute="trailing" secondItem="US7-Sd-kcj" secondAttribute="trailing" constant="47" id="YaW-bm-iu0"/>
                             <constraint firstItem="oQG-s2-iCo" firstAttribute="top" secondItem="US7-Sd-kcj" secondAttribute="bottom" constant="30" id="iQU-AV-ZQi"/>
@@ -134,7 +134,7 @@
             <objects>
                 <navigationController id="T72-CS-9IC" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="8uS-MS-XXO">
-                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
