--- a/Resources/Base.lproj/Main.storyboard
+++ b/Resources/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4OV-NC-iVc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BLT-Uj-3LP">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Random Users Table View Controller-->
+        <!--Users-->
         <scene sceneID="SMh-Uu-rkI">
             <objects>
                 <tableViewController id="4OV-NC-iVc" customClass="RandomUsersTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
@@ -20,33 +20,43 @@
                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <items>
-                                <navigationItem title="Title" id="ybl-Mo-5vj"/>
+                                <navigationItem id="ybl-Mo-5vj"/>
                             </items>
                         </navigationBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" id="307-zh-Guz" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="72" width="375" height="43.666667938232422"/>
+                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="307-zh-Guz" id="wak-su-aTo">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Z9P-mZ-jPw">
-                                            <rect key="frame" x="16" y="0.0" width="50" height="44"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z9P-mZ-jPw">
+                                            <rect key="frame" x="8" y="0.0" width="50" height="44"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="50" id="1CR-wO-9JJ"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name Here:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nmh-ja-q1a">
-                                            <rect key="frame" x="85" y="12" width="253" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name Here:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nmh-ja-q1a">
+                                            <rect key="frame" x="77" y="11.999999999999998" width="261" height="21.333333333333329"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Z9P-mZ-jPw" firstAttribute="leading" secondItem="wak-su-aTo" secondAttribute="leading" constant="8" id="JvZ-0G-WVj"/>
+                                        <constraint firstAttribute="bottom" secondItem="Z9P-mZ-jPw" secondAttribute="bottom" id="PNx-Ks-zNt"/>
+                                        <constraint firstAttribute="bottom" secondItem="nmh-ja-q1a" secondAttribute="bottom" constant="10.666667938232422" id="W50-I5-6ih"/>
+                                        <constraint firstItem="nmh-ja-q1a" firstAttribute="top" secondItem="wak-su-aTo" secondAttribute="top" constant="12" id="aNn-7A-HLg"/>
+                                        <constraint firstItem="Z9P-mZ-jPw" firstAttribute="top" secondItem="wak-su-aTo" secondAttribute="top" id="rBd-4t-8Ie"/>
+                                        <constraint firstItem="nmh-ja-q1a" firstAttribute="leading" secondItem="Z9P-mZ-jPw" secondAttribute="trailing" constant="19" id="s8L-op-mbn"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="nmh-ja-q1a" secondAttribute="trailing" constant="21" id="xDh-RY-xcw"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="userImage" destination="Z9P-mZ-jPw" id="w8h-yS-nIz"/>
-                                    <outlet property="userName" destination="nmh-ja-q1a" id="k1u-iV-VaH"/>
+                                    <outlet property="userImageView" destination="Z9P-mZ-jPw" id="jMO-4B-P6a"/>
+                                    <outlet property="userNameLabel" destination="nmh-ja-q1a" id="GGI-5z-54U"/>
                                     <segue destination="6tJ-4H-DDa" kind="show" identifier="UserDetailSegue" id="Yx0-bY-vTK"/>
                                 </connections>
                             </tableViewCell>
@@ -56,10 +66,11 @@
                             <outlet property="delegate" destination="4OV-NC-iVc" id="Zma-KM-S2R"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Users" id="iPk-W2-e9k"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kgN-rZ-r9I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-178.40000000000001" y="-138.17733990147784"/>
+            <point key="canvasLocation" x="641" y="-138"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="wDY-hu-EVU">
@@ -69,46 +80,74 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="phc-TU-VRf">
-                                <rect key="frame" x="16" y="229" width="343" height="332"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="8pi-U9-X2O">
+                                <rect key="frame" x="8" y="691.33333333333337" width="359" height="70.666666666666629"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VFA-J4-E0u">
+                                        <rect key="frame" x="0.0" y="0.0" width="359" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email Address " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jkg-2d-jfO">
+                                        <rect key="frame" x="0.0" y="50.333333333333258" width="359" height="20.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="phc-TU-VRf">
+                                <rect key="frame" x="16" y="247.99999999999997" width="343" height="333.33333333333326"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6uA-mc-F0i">
-                                <rect key="frame" x="16" y="617" width="238" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Phone Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VFA-J4-E0u">
-                                <rect key="frame" x="16" y="664" width="238" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Email Address " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jkg-2d-jfO">
-                                <rect key="frame" x="16" y="719" width="238" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gts-y2-ygx">
+                                <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem id="Xg2-NC-n56"/>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="phc-TU-VRf" firstAttribute="top" secondItem="iMw-wC-pz6" secondAttribute="top" constant="160" id="3J3-Ms-OPj"/>
+                            <constraint firstItem="iMw-wC-pz6" firstAttribute="bottom" secondItem="8pi-U9-X2O" secondAttribute="bottom" constant="16" id="BOH-Bw-Bxh"/>
+                            <constraint firstItem="8pi-U9-X2O" firstAttribute="top" secondItem="phc-TU-VRf" secondAttribute="bottom" constant="110" id="OF6-8T-5Af"/>
+                            <constraint firstItem="iMw-wC-pz6" firstAttribute="trailing" secondItem="8pi-U9-X2O" secondAttribute="trailing" constant="8" id="QBY-wu-RSh"/>
+                            <constraint firstItem="iMw-wC-pz6" firstAttribute="trailing" secondItem="phc-TU-VRf" secondAttribute="trailing" constant="16" id="bkX-RM-bwC"/>
+                            <constraint firstItem="8pi-U9-X2O" firstAttribute="leading" secondItem="iMw-wC-pz6" secondAttribute="leading" constant="8" id="gU3-ZM-GeY"/>
+                            <constraint firstItem="phc-TU-VRf" firstAttribute="leading" secondItem="iMw-wC-pz6" secondAttribute="leading" constant="16" id="zrz-Ge-vEe"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="iMw-wC-pz6"/>
                     </view>
                     <navigationItem key="navigationItem" id="zSo-hT-6KM"/>
                     <connections>
-                        <outlet property="userEmail" destination="Jkg-2d-jfO" id="OMP-5N-Rej"/>
-                        <outlet property="userImage" destination="phc-TU-VRf" id="Jyw-t7-AAc"/>
-                        <outlet property="userName" destination="6uA-mc-F0i" id="etZ-g8-qEN"/>
-                        <outlet property="userPhone" destination="VFA-J4-E0u" id="uQX-Ke-Mnr"/>
+                        <outlet property="phoneNumberLabel" destination="VFA-J4-E0u" id="CdN-ES-4Ib"/>
+                        <outlet property="userEmailLabel" destination="Jkg-2d-jfO" id="ZJC-Bf-cgy"/>
+                        <outlet property="userImageView" destination="phc-TU-VRf" id="Qzv-TF-tES"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IwM-oR-J9O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="520.79999999999995" y="-138.17733990147784"/>
+            <point key="canvasLocation" x="1463.2" y="-138.17733990147784"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Ygj-rg-Imr">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BLT-Uj-3LP" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Zgy-UC-yaA">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="4OV-NC-iVc" kind="relationship" relationship="rootViewController" id="M76-1r-Mw4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Iy2-Dj-nIn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-178.40000000000001" y="-138.17733990147784"/>
         </scene>
     </scenes>
 </document>
