--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,11 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Users-->
+        <scene sceneID="Pne-uJ-Oo8">
+            <objects>
+                <tableViewController id="oWQ-U1-qEG" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="RzD-IX-pAs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="CYl-c5-X7D">
+                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="CYl-c5-X7D" id="fl8-Gh-31M">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="oWQ-U1-qEG" id="1sN-L2-1Ng"/>
+                            <outlet property="delegate" destination="oWQ-U1-qEG" id="018-R0-cbC"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Users" id="gE9-cb-A3X">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="DI3-hu-KyM"/>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GK3-2x-kCj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1732" y="-5.8470764617691158"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="jzg-Eo-tci">
+            <objects>
+                <viewController id="Hvs-Jf-Of7" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="daD-mb-PIu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S1K-Sa-66N">
+                                <rect key="frame" x="20" y="75" width="335" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="wES-sb-SCT"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H7U-tK-dda">
+                                <rect key="frame" x="20" y="425" width="335" height="41"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email@email.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ls4-l6-yz6">
+                                <rect key="frame" x="20" y="507" width="335" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(123)456-7890" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1xZ-bv-BrB">
+                                <rect key="frame" x="20" y="476" width="335" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="H7U-tK-dda" firstAttribute="leading" secondItem="F3r-0b-Ad9" secondAttribute="leading" constant="20" id="0xN-vA-b97"/>
+                            <constraint firstItem="F3r-0b-Ad9" firstAttribute="trailing" secondItem="1xZ-bv-BrB" secondAttribute="trailing" constant="20" id="1yC-2q-D0b"/>
+                            <constraint firstItem="F3r-0b-Ad9" firstAttribute="trailing" secondItem="H7U-tK-dda" secondAttribute="trailing" constant="20" id="CZT-sK-ILG"/>
+                            <constraint firstItem="1xZ-bv-BrB" firstAttribute="leading" secondItem="F3r-0b-Ad9" secondAttribute="leading" constant="20" id="IIe-xT-u3D"/>
+                            <constraint firstItem="F3r-0b-Ad9" firstAttribute="trailing" secondItem="ls4-l6-yz6" secondAttribute="trailing" constant="20" id="JEH-ni-Q5U"/>
+                            <constraint firstItem="ls4-l6-yz6" firstAttribute="leading" secondItem="F3r-0b-Ad9" secondAttribute="leading" constant="20" id="Rsb-iV-Bnd"/>
+                            <constraint firstItem="H7U-tK-dda" firstAttribute="top" secondItem="S1K-Sa-66N" secondAttribute="bottom" constant="50" id="Ts0-Wf-Sny"/>
+                            <constraint firstItem="1xZ-bv-BrB" firstAttribute="top" secondItem="H7U-tK-dda" secondAttribute="bottom" constant="10" id="b0o-5q-zXg"/>
+                            <constraint firstItem="S1K-Sa-66N" firstAttribute="leading" secondItem="F3r-0b-Ad9" secondAttribute="leading" constant="20" id="mKm-4U-3MG"/>
+                            <constraint firstItem="F3r-0b-Ad9" firstAttribute="trailing" secondItem="S1K-Sa-66N" secondAttribute="trailing" constant="20" id="upw-qQ-k4W"/>
+                            <constraint firstItem="ls4-l6-yz6" firstAttribute="top" secondItem="1xZ-bv-BrB" secondAttribute="bottom" constant="10" id="yNa-3h-CLz"/>
+                            <constraint firstItem="S1K-Sa-66N" firstAttribute="top" secondItem="F3r-0b-Ad9" secondAttribute="top" constant="75" id="yyE-Fh-paN"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="F3r-0b-Ad9"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m9T-EU-lPS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-951.20000000000005" y="-6.746626686656672"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="rKJ-ti-w8e">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ROf-mP-6yK" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="RCr-U2-AsK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="oWQ-U1-qEG" kind="relationship" relationship="rootViewController" id="nfT-z7-gNP"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Yqd-XS-kp2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2671.1999999999998" y="-5.8470764617691158"/>
+        </scene>
+    </scenes>
 </document>
